# epplib

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
epplib/: __init__.py  client.py  commands.py  constants.py  exceptions.py  models.py  responses.py  transport.py  utils.py
epplib/commands/: __init__.py  base.py  check.py  command_extensions.py  create.py  delete.py  extensions.py  info.py  list.py  renew.py  transfer.py  update.py
epplib/models/: __init__.py  check.py  common.py  create.py  credit_info.py  info.py  list.py  renew.py
epplib/responses/: __init__.py  base.py  check.py  create.py  credit_info.py  extensions.py  info.py  list.py  poll_messages.py  renew.py
epplib/tests/: __init__.py  common.py  test_client.py  test_commands.py  test_commands_base.py  test_commands_check.py  test_commands_command_extensions.py  test_commands_create.py  test_commands_delete.py  test_commands_extensions.py  test_commands_info.py  test_commands_list.py  test_commands_renew.py  test_commands_transfer.py  test_commands_update.py  test_exceptions.py  test_models.py  test_responses.py  test_responses_base.py  test_responses_check.py  test_responses_create.py  test_responses_credit_info.py  test_responses_extensions.py  test_responses_info.py  test_responses_list.py  test_responses_poll_messages.py  test_responses_renew.py  test_transport.py  test_utils.py  utils.py
epplib/tests/data/: greeting.xml
epplib/tests/data/responses/: greeting_template.xml  result.xml  result_check_contact.xml  result_check_domain.xml  result_check_keyset.xml  result_check_nsset.xml  result_create_contact.xml  result_create_domain_template.xml  result_create_keyset.xml  result_create_nsset.xml  result_credit_info.xml  result_dummy_extension.xml  result_dummy_poll_message.xml  result_error.xml  result_get_results.xml  result_info_contact.xml  result_info_contact_minimal.xml  result_info_domain.xml  result_info_domain_minimal.xml  result_info_keyset.xml  result_info_keyset_minimal.xml  result_info_nsset.xml  result_info_nsset_minimal.xml  result_list.xml  result_renew_domain_template.xml
epplib/tests/data/schemas/: all-2.4.1.xsd  contact-1.6.3.xsd  contact-1.6.4.xsd  contact.xsd  domain-1.4.3.xsd  extra-addr-1.0.0.xsd  keyset-1.3.3.xsd  nsset-1.2.3.xsd
epplib/tests/tests_ietf/: __init__.py  constants.py  test_comands_command_extensions.py  test_commands_check.py  test_commands_command_extensions.py  test_commands_create.py  test_commands_delete.py  test_commands_info.py  test_commands_transfer.py  test_commands_update.py  test_extensions.py  test_responses.py  test_responses_extensions.py
epplib/tests/tests_ietf/data/: infoDomainNoContact.xml
epplib/tests/tests_ietf/data/schemas/: all-1.0.xsd  contact-1.0.xsd  domain-1.0.xsd  host-1.0.xsd  secDNS-1.1.xsd
