[metadata]
name = fred-epplib
version = 0.0.1
author = Ondřej Fikar
author_email = ondrej.fikar@nic.cz
description = Fred-epplib is FRED EPP library.
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
zip_safe = false
packages = find:
include_package_data = True
python_requires = ~=3.7
install_requires =
    lxml>=4.6
    python-dateutil

[options.extras_require]
quality =
    bandit
    doc8
    flake8
    isort
    mypy
    pydocstyle
test =
    freezegun
    testfixtures
    typing-extensions ; python_version<"3.8"
types =
    types-python-dateutil
    types-freezegun

[doc8]
max-line-length = 120
allow-long-titles = true

[isort]
line_length = 120
known_first_party = epplib
combine_as_imports = true

[flake8]
max-line-length = 120
max-complexity = 10

[pydocstyle]
convention = google
add_ignore = D105,D106,D107
add_select = D204,D400,D401

[mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-epplib.tests.*]
disallow_untyped_defs = false
